# linting_formatting_python

./: .githooks.ini  .gitignore  lint_staged.sh  pyproject.toml
