[tool.poetry]
name = "simple_chat_api"
version = "0.1.0"
description = "Simple chat API with DRF"
authors = ["genndy007 <kochevgenazp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
djangorestframework-jwt = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
